rmv: removing user data
