# src/database/model/UserModel.js
@@ -21,10 +21,10 @@ const User = new mongoose.Schema({
     type: String,
     required: true
   },
-  last_name: {
-    type: String,
-    required: true
-  },
+  // last_name: {
+  //   type: String,
+  //   required: true
+  // },
   email: {
     type: String,
     required: true,
@@ -44,10 +44,10 @@ const User = new mongoose.Schema({
     type: Date,
     select: false
   },
-  cep: {
-    type: String,
-    required: true
-  },
+  // cep: {
+  //   type: String,
+  //   required: true
+  // },
   role: {
     type: String,
     default: 'User'
