# src/swagger.json
@@ -317,23 +317,14 @@
               "name": {
                 "type": "string"
               },
-              "last_name": {
-                "type": "string"
-              },
               "email": {
                 "type": "string"
               },
               "password": {
                 "type": "string"
-              },
-              "confirm_password": {
-                "type": "string"
-              },
-              "cep": {
-                "type": "string"
               }
             },
-            "required": ["name", "last_name", "email", "password", "confirm_password", "cep"]
+            "required": ["name", "email", "password"]
           }
         },
         "securitySchemes": {
