# src/validators/CreateUserValidators.js
@@ -5,19 +5,19 @@ module.exports = async body => {
     name: Joi.string()
       .regex(/^[a-zA-Z0-9\s]+$/)
       .required(),
-    last_name: Joi.string()
-      .regex(/^[a-zA-Z0-9\s]+$/)
-      .required(),
+    // last_name: Joi.string()
+    //   .regex(/^[a-zA-Z0-9\s]+$/)
+    //   .required(),
     email: Joi.string()
       .required()
       .email(),
     password: Joi.string()
       .pattern(/^[a-zA-Z0-9]{3,30}$/)
       .required()
-      .min(6),
-    confirm_password: Joi.ref('password'),
-    cep: Joi.string()
-      .required()
+      .min(6)
+    // confirm_password: Joi.ref('password'),
+    // cep: Joi.string()
+    //   .required()
   });
   try {
     return await schema.validate(body);
